--- a/bio.html
+++ b/bio.html
@@ -1,7 +1,3 @@
----
-layout: Leap Day
-title: My Website
----
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -9,10 +5,9 @@ title: My Website
     <title>My Website</title>
   </head>
   <body>
-    <h1>Control Center</h1>
+    <h1>ABOUT</h1>
     <a href=  "https://andesjoshua.github.io/prework-website-project/">HOME</a>
     <a href= "projects.html">PROJECTS</a>
-    <a href= "bio.html">BIO</a>
-    <script src="script.js"></script> 
+    <a href= "bio.html">ABOUT</a>
   </body>
 </html> 
